# gotcha

./: .env  .gitignore  Cargo.toml  Makefile.toml  README.md  api.css  api.js  docker-compose.yml  lib.js  rustfmt.toml  style.css
.cargo/: config.toml
.githooks/: pre-commit.sh
.github/workflows/: deploy.yml  general.yml
.sqlx/: query-07b3801a2717b6207f84358006156f69afd52dd35320fe50b955f919a0c63c34.json  query-08e0895c4cd1b7a603a62565c6a95a3d099f38f1a44c477532417150408791e9.json  query-13a80fecc2ccb5777546178855586c9ce7ff9493645cfb58f896ee71fc8a6a77.json  query-14a8657ad1afb6bcb8fa9865d6424699cc572a2a5073c9c3b07007aa9289c190.json  query-1e8c3f4a5ab063914d7a01ef0f0ee3383943203f4b5610ccd10e69d1f4c212fd.json  query-20bcfb5e6f12de7f67684a606a9c4e5b11f483e924bb5a84cfb13cfc9e4886dc.json  query-242ee755259d0ca5eb5ac4f8a259ebea4621646317de8a88589aa063b551d2fc.json  query-263d66142501c5858696a12c94fb033617e160914125b4c987273993b0e73f1e.json  query-26aec715cf72ea69d290691fdcc953e1d85e64382781dc0058d2bc2847499f0b.json  query-2b3ebaa54842c5c9b8ae2e82848427a57c4696614c60cf72eaee78e4bb7a460e.json  query-2c8f329aef8bbb3a71424fbe61b9fb16757dd817069c549bb039089c23a0a529.json  query-3135a146f14aa9567d8617a126434a8119d47ecbcc48e7e71015be8176676212.json  query-3f1254028d4311c199e53c34a43d40d675712d41585fa859a4e36b36a07fbdff.json  query-40f755ba75371c772a3e1ac361bd596e75b28d0354d86a27db01874906ea9593.json  query-465a8e22506f0398e064376f655a0f958e48cdb43ce4f843cad550496cf36c28.json  query-48842ef0774a5020cde864d993f24dc3f8deeb4d5e7d4dcc4d0f9c038abdffe3.json  query-496f8d36e88c7f9020c49f2b38e4f1ae0d5c432248559e82dcc06cf5a4a132f4.json  query-4d6549a02b02a02c0becc4de9459e05c025416d58d0dbbea282723ef69d71a62.json  query-524c27fd456b12119bf3110de56ee612716fa2cbfcc3f846083cff431ab6eef7.json  query-5c2f3f269f86e71b4d94c594f8ffacba15309a422231059d4c9cdef86e360cb3.json  query-6602288ad845485ca3bea69927ccd7fd10797881bf279231b3440702cab2f21a.json  query-6f046c0330de68c01efd4e91796513f061298c3524bea1c5d804d065e4b4b9d1.json  query-725ea78cfec2e15e3e0c3866aa45ec781e3f6e790967b86fd30ad7eb45cacdbe.json  query-745064af65ec8c03a438511f3e9c0ec893d035ee7cc090b526ddd5973a0b609a.json  query-77b61cbd0b76888cc59f2a9c141f53fd743d7c4f8e3b4ea7c0a1058590878e93.json  query-834d17f7d1da0020660c65794d01e1be0a92a1dce8f5000e1e61a3625c95c83b.json  query-857966af8882e3d3ae59beee473ab2c885ff6a75263278fb108d38ff46b46fd1.json  query-85c0aac412fb543cc1800c4472dfa54607d84a14c6db28e4cd8c66b423070a56.json  query-861573e3f8d2d5b1afb70424a8cdaa18a379ad22ee1e4e2398c9f7940b656634.json  query-967ef77fc051ce58cf333587832325e9ced8c5fe9accff80c1131c6c645b8701.json  query-9f00288dd99acdf9dee7d84173e623067532ae2c8900ec1eb0ccc54cc6bd9959.json  query-ba0549811cf32421ae990d28ad762f5347fb41ef9dd3fbd6e34bf6e4630e1632.json  query-c463d4f854632e67ac39c2322758be34fca75867aabf263a9f7634c5255fd74a.json  query-c7b81fb5b552f2f2839964e50d408c57d8d81bb291fce43f776b4abd86a7a78e.json  query-cb6980de42c79640cbf3dad4d0c788e717a905677b052e24315a93b721b053b9.json  query-ccce4bef4917b44bb10a288a0e2f7371788c2aa6a467d2058f360331897e737b.json  query-d31774fd3fdf4910ba8a8e6919161348a51f24b564815fb93049996f3ff3f0f3.json  query-d5462893f7cffccde39fb2168107c1758e6c8391ad46dfefecf4aab23197c3ab.json  query-dcda6e5cffba2847b2149a785cc0d352468dbdcb91f1d6bcd8b9bdd870833dc6.json  query-e4841d872c75c7c51f3064cc6599e1108145762ee443283f95c6f1cb23e03ce4.json  (+11 more)
client/: Cargo.toml
client/assets/: auto-render.html  google-widget.html  index.html  invisible-render.html  js-params.html  multiple-render.html
client/src/: lib.rs  main.rs
config/: base.yaml  local.yaml  production.yaml
constellation/: index.html
constellation/assets/: index-BZhMA7IC.js  index-CMIhgSOy.js  index-CeFNHpq2.js  (+1 more)
cup-stack/: index.html
migrations/: 20241104122052_init.down.sql  20241104122052_init.up.sql  20241104151230_populate.down.sql  20241104151230_populate.up.sql  20241212135410_console-support.down.sql  20241212135410_console-support.up.sql  20250623115240_challenge-customization.down.sql  20250623115240_challenge-customization.up.sql  20250911161211_api_key_allowed_domains.down.sql  20250911161211_api_key_allowed_domains.up.sql
server/: Cargo.toml  build.rs
server-macros/: Cargo.toml
server/config/: base.yaml  local.yaml
server/examples/client/: main.rs
server/examples/client/assets/: auto-render.html  demo.html  explicit-render.html  index.html  invisible-render.html  multiple-render.html
server/self_signed_certs/: cert.pem  key.pem
server/src/: analysis.rs  configuration.rs  crypto.rs  db.rs  encodings.rs  extractors.rs  hostname.rs  lib.rs  main.rs  response_token.rs  routes.rs  serde.rs  test_helpers.rs  tokens.rs
server/src/analysis/: interaction.rs  proof_of_work.rs
server/src/db/: errors.rs  queries.rs
server/src/routes/: admin.rs  challenge.rs  console.rs  error.rs  errors.rs  extractors.rs  internal.rs  middleware.rs  public.rs  verification.rs
server/src/tokens/: auth.rs  pow_challenge.rs  response.rs
server/tests/: admin.rs  challenge.rs  console.rs  endpoints.rs  internal.rs  public.rs  verification.rs
server/widget/: package-lock.json  package.json  tsconfig.json  vite.config.ts
server/widget-api/: package-lock.json  package.json  tsconfig.json  vite.config.ts
server/widget-api/src/: api.tsx  grecaptcha.tsx  load-css.ts  styles.css
server/widget-api/src/components/: gotcha-widget.tsx
server/widget-lib/src/: lib.ts
server/widget/src/: api.tsx  grecaptcha.tsx  js-params.ts  lib.ts
server/widget/src/components/: GotchaWidget.tsx  yes-no-widget.tsx
server/widgets/im-not-a-robot/: package-lock.json  package.json  vite.config.ts
server/widgets/im-not-a-robot/src/: App.tsx
src/: lib.rs  main.rs
widget-api/: .env  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
widgets/: Cargo.toml
widgets/cup-stack/: Cargo.toml
widgets/cup-stack/src/: camera.rs  cup.rs  game.rs  gotcha_lib.rs  input.rs  main.rs  throwable.rs  ui.rs
widgets/gotcha-plugin/: Cargo.toml
widgets/gotcha-plugin/src/: lib.rs  ui.rs
(+58 files in other folders)
