[package]
name = "gotcha-server"
version = "0.1.0"
edition = "2021"

[features]
# default = ["aws-lambda"]
aws-lambda = ["dep:lambda_http"]

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
time = { version = "0.3", features = ["serde", "formatting"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
secrecy = { version = "0.8", features = ["serde"] }
anyhow = "1"
thiserror = "1"
reqwest = { version = "0.12", features = ["json", "native-tls-vendored"] }
reqwest-middleware = "0.4"
http-cache-reqwest = { version = "0.15", default-features = false, features = [
    "manager-cacache",
] }
config = { version = "0.14", default-features = false, features = ["yaml"] }
jsonwebtoken = "9"
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
    "time",
    "uuid",
    "ipnetwork",
] }
uuid = { version = "1", features = ["v4", "serde"] }
rand = { version = "0.8", features = ["min_const_gen"] }
base64 = "0.22"
lambda_http = { version = "0.13", optional = true }

[dev-dependencies]
gotcha-server-macros = { path = "../server-macros" }
serde_json = "1"

[package.metadata.lambda.deploy]
env = { "APP_ENVIRONMENT" = "production" }
tags = { "organization" = "gotcha" }
