[package]
name = "gotcha-plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15", features = ["dynamic_linking"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.15" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window"] }
